<?xml version="1.0"?>
<package format="2">
  <name>pwm_radio_arduino</name>
  <version>0.0.0</version>
  <description>The pwm_radio_arduino package</description>

  <maintainer email="sbmatyunin@gmail.com">SergeM</maintainer>


  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pwm_radio_arduino</url> -->


  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_depend>message_runtime</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
